--- a/HSE_transport_manager/packages.config
+++ b/HSE_transport_manager/packages.config
@@ -3,6 +3,9 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.2.4.0" targetFramework="net45" />
   <package id="MahApps.Metro.Resources" version="0.4.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="MvvmLight" version="5.2.0.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
+  <package id="Telegram.Bot" version="8.1.0" targetFramework="net45" />
 </packages>
