--- a/MSDatabaseService/MSDatabaseService.csproj
+++ b/MSDatabaseService/MSDatabaseService.csproj
@@ -40,11 +40,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context.cs" />
+    <Compile Include="Entities\BusPrice.cs" />
+    <Compile Include="Entities\BusSchedule.cs" />
+    <Compile Include="Entities\Dormitory.cs" />
+    <Compile Include="Entities\DubkiBusSchedule.cs" />
+    <Compile Include="Entities\HSEBuilding.cs" />
+    <Compile Include="Entities\LocalTrainPrice.cs" />
+    <Compile Include="Entities\LocalTrainSchedule.cs" />
+    <Compile Include="Entities\LocalTrainStation.cs" />
+    <Compile Include="Entities\LocalTrainStop.cs" />
+    <Compile Include="Entities\SubwayElapsedTime.cs" />
+    <Compile Include="Entities\SubwayStation.cs" />
+    <Compile Include="Entities\TramPrice.cs" />
+    <Compile Include="Entities\TramSchedule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Entities\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
