--- a/UberService/UberService.csproj
+++ b/UberService/UberService.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F3C4EC9C-2D9E-419B-96D2-DAB5CE3500AE}</ProjectGuid>
+    <ProjectGuid>{10A804EF-6332-4FE7-912B-F91382FA447B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HSE_transport_manager.Common</RootNamespace>
-    <AssemblyName>HSE_transport_manager.Common</AssemblyName>
+    <RootNamespace>UberService</RootNamespace>
+    <AssemblyName>UberService</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,10 +39,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ITaxiService.cs" />
-    <Compile Include="ITransportSchedulerService.cs" />
-    <Compile Include="Models\Coordinate.cs" />
-    <Compile Include="Models\TripData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
