--- a/MSDatabaseService/MSDatabaseService.csproj
+++ b/MSDatabaseService/MSDatabaseService.csproj
@@ -62,11 +62,21 @@
     <Compile Include="Entities\SubwayStation.cs" />
     <Compile Include="Entities\TramPrice.cs" />
     <Compile Include="Entities\TramSchedule.cs" />
+    <Compile Include="Migrations\201603131716429_Initial.cs" />
+    <Compile Include="Migrations\201603131716429_Initial.Designer.cs">
+      <DependentUpon>201603131716429_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201603131716429_Initial.resx">
+      <DependentUpon>201603131716429_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
