--- a/HSE_transport_manager.Common/HSE_transport_manager.Common.csproj
+++ b/HSE_transport_manager.Common/HSE_transport_manager.Common.csproj
@@ -41,6 +41,8 @@
   <ItemGroup>
     <Compile Include="ITaxiService.cs" />
     <Compile Include="ITransportSchedulerService.cs" />
+    <Compile Include="Models\Coordinate.cs" />
+    <Compile Include="Models\TripData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
