--- a/HSE_transport_manager.Common/HSE_transport_manager.Common.csproj
+++ b/HSE_transport_manager.Common/HSE_transport_manager.Common.csproj
@@ -44,6 +44,10 @@
     <Compile Include="Interfaces\ITransportService.cs" />
     <Compile Include="Models\Coordinate.cs" />
     <Compile Include="Models\TaxiTripData.cs" />
+    <Compile Include="Models\TrainSchedules\DailyTrainSchedule.cs" />
+    <Compile Include="Models\TrainSchedules\SingleTrainSchedule.cs" />
+    <Compile Include="Models\TrainSchedules\TrainStation.cs" />
+    <Compile Include="Models\TrainSchedules\TrainStop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
