--- a/MSDatabaseService/MSDatabaseService.csproj
+++ b/MSDatabaseService/MSDatabaseService.csproj
@@ -65,6 +65,10 @@
     <Compile Include="Migrations\201603171107274_Initial.Designer.cs">
       <DependentUpon>201603171107274_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201603171208385_AddField.cs" />
+    <Compile Include="Migrations\201603171208385_AddField.Designer.cs">
+      <DependentUpon>201603171208385_AddField.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\DormitoryData.cs" />
     <Compile Include="Models\HSEBuildingData.cs">
@@ -82,6 +86,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201603171107274_Initial.resx">
       <DependentUpon>201603171107274_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603171208385_AddField.resx">
+      <DependentUpon>201603171208385_AddField.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
