Implmented Request builder, moved coordinate upper in the folder hierarchy

--- a/GoogleGeoMatrixService/GoogleGeoMatrixService.csproj
+++ b/GoogleGeoMatrixService/GoogleGeoMatrixService.csproj
@@ -40,6 +40,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestBuilder.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HSE_transport_manager.Common\HSE_transport_manager.Common.csproj">
+      <Project>{f3c4ec9c-2d9e-419b-96d2-dab5ce3500ae}</Project>
+      <Name>HSE_transport_manager.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
