--- a/HSE_transport_manager.Common/HSE_transport_manager.Common.csproj
+++ b/HSE_transport_manager.Common/HSE_transport_manager.Common.csproj
@@ -42,7 +42,7 @@
     <Compile Include="Interfaces\ITaxiService.cs" />
     <Compile Include="Interfaces\ITransportSchedulerService.cs" />
     <Compile Include="Interfaces\ITransportService.cs" />
-    <Compile Include="Models\TaxiData\Coordinate.cs" />
+    <Compile Include="Models\Coordinate.cs" />
     <Compile Include="Models\TaxiData\TaxiTripData.cs" />
     <Compile Include="Models\TrainSchedulesData\DailyTrainSchedule.cs" />
     <Compile Include="Models\TrainSchedulesData\SingleTrainSchedule.cs" />
