--- a/MSDatabaseService/MSDatabaseService.csproj
+++ b/MSDatabaseService/MSDatabaseService.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Entities\LocalTrainStation.cs" />
     <Compile Include="Entities\SubwayElapsedTime.cs" />
     <Compile Include="Entities\SubwayStation.cs" />
+    <Compile Include="Entities\TransportType.cs" />
+    <Compile Include="IDatabaseService.cs" />
     <Compile Include="LoadFromCSV.cs" />
     <Compile Include="Migrations\201603171638480_Initial.cs" />
     <Compile Include="Migrations\201603171638480_Initial.Designer.cs">
@@ -94,9 +96,11 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Models\PublicTransportData.cs" />
+    <Compile Include="Models\QueryResult.cs" />
     <Compile Include="Models\SubwayStationData.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Models\Transport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -120,14 +124,20 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Data\Dormitories.csv" />
     <EmbeddedResource Include="Data\HSEBuildings.csv" />
-    <EmbeddedResource Include="Data\SubwayStations.csv" />
-    <EmbeddedResource Include="Data\Dubki.csv" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <EmbeddedResource Include="Data\Dubki.csv" />
+    <EmbeddedResource Include="Data\SubwayStations.csv" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HSE_transport_manager.Common\HSE_transport_manager.Common.csproj">
+      <Project>{f3c4ec9c-2d9e-419b-96d2-dab5ce3500ae}</Project>
+      <Name>HSE_transport_manager.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
