--- a/MSDatabaseService/MSDatabaseService.csproj
+++ b/MSDatabaseService/MSDatabaseService.csproj
@@ -90,6 +90,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <EmbeddedResource Include="Data\SubwayStations.csv" />
+    <EmbeddedResource Include="Data\PublicTransport.csv" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
