Added field in database

--- a/MSDatabaseService/MSDatabaseService.csproj
+++ b/MSDatabaseService/MSDatabaseService.csproj
@@ -69,6 +69,10 @@
     <Compile Include="Migrations\201603192251037_Initial.Designer.cs">
       <DependentUpon>201603192251037_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201603200059093_Add_field.cs" />
+    <Compile Include="Migrations\201603200059093_Add_field.Designer.cs">
+      <DependentUpon>201603200059093_Add_field.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\DormitoryData.cs" />
     <Compile Include="Models\DubkiBusData.cs" />
@@ -85,6 +89,9 @@
     <EmbeddedResource Include="Data\HSEBuildings.csv" />
     <EmbeddedResource Include="Migrations\201603192251037_Initial.resx">
       <DependentUpon>201603192251037_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603200059093_Add_field.resx">
+      <DependentUpon>201603200059093_Add_field.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
