Implemented IDialog provider, added required interface, added class

--- a/HSE_transport_manager.Common/HSE_transport_manager.Common.csproj
+++ b/HSE_transport_manager.Common/HSE_transport_manager.Common.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\IDataRepository.cs" />
+    <Compile Include="Interfaces\IDialogProvider.cs" />
     <Compile Include="Interfaces\ITaxiService.cs" />
     <Compile Include="Interfaces\ITransportMonitoringService.cs" />
     <Compile Include="Interfaces\ITransportSchedulerService.cs" />
