--- a/MSDatabaseService/MSDatabaseService.csproj
+++ b/MSDatabaseService/MSDatabaseService.csproj
@@ -65,16 +65,12 @@
     <Compile Include="Entities\TransportType.cs" />
     <Compile Include="IDatabaseService.cs" />
     <Compile Include="LoadFromCSV.cs" />
-    <Compile Include="Migrations\201603200925160_Initial.cs" />
-    <Compile Include="Migrations\201603200925160_Initial.Designer.cs">
-      <DependentUpon>201603200925160_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\DormitoryData.cs" />
     <Compile Include="Models\DubkiBusData.cs" />
     <Compile Include="Models\HSEBuildingData.cs" />
     <Compile Include="Models\PublicTransportData.cs" />
     <Compile Include="Models\QueryResult.cs" />
+    <Compile Include="Models\Route.cs" />
     <Compile Include="Models\SubwayStationData.cs" />
     <Compile Include="Models\Transport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -82,9 +78,6 @@
   <ItemGroup>
     <EmbeddedResource Include="Data\Dubki.csv" />
     <EmbeddedResource Include="Data\HSEBuildings.csv" />
-    <EmbeddedResource Include="Migrations\201603200925160_Initial.resx">
-      <DependentUpon>201603200925160_Initial.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
