Added several methods

--- a/HSE_transport_manager.Common/HSE_transport_manager.Common.csproj
+++ b/HSE_transport_manager.Common/HSE_transport_manager.Common.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Interfaces\ITransportSchedulerService.cs" />
     <Compile Include="Interfaces\ITransportService.cs" />
     <Compile Include="Models\Coordinate.cs" />
+    <Compile Include="Models\DubkiSchedule.cs" />
     <Compile Include="Models\KeyData.cs" />
     <Compile Include="Models\QueryResult.cs" />
     <Compile Include="Models\Route.cs" />
